bug in admin section - not centered when screen is enlarged

--- a/Assignments/Assignment3/public/css/bootstrap.css
+++ b/Assignments/Assignment3/public/css/bootstrap.css
@@ -183,6 +183,14 @@
     margin: 15px 50px 0px 50px; /*margins: top, right, bottom, left */
 }
 
+#test{
+    /*background: yellow; /* add bg colour */
+}
+
+.row .admin-section{
+   /*align content here???????????????*/
+}
+
 /* --------------------------------------------------------------------- */
 /* comments section styles */
 
